--- a/src/components/sections/Traning/Traning.module.scss
+++ b/src/components/sections/Traning/Traning.module.scss
@@ -117,6 +117,7 @@
   align-items: center;
   justify-content: space-between;
   margin-bottom: 8px;
+  overflow: hidden;
 }
 
 .sectionTitle {
@@ -136,6 +137,7 @@
   align-items: center;
   gap: 8px;
   cursor: pointer;
+  flex-shrink: 0;
 
   input { display: none; }
 }
